Fix extra space on modals with less info

--- a/src/containers/AdminMentorModal/AdminMentorModal.css
+++ b/src/containers/AdminMentorModal/AdminMentorModal.css
@@ -1,12 +1,16 @@
 .amm-modal-show {
   background-color: #fff;
   position: fixed;
-  left: 20%;
-  right: 20%;
+  left: 10%;
+  right: 10%;
   top: 10%;
   bottom: 10%;
   box-shadow: 4px 4px 10px rgba(95, 95, 95, .2);
-  overflow: scroll;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
 }
 
 .amm-basic-info {
